k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: amir

---
apiVersion: v1
kind: Namespace
metadata:
  name: ui
