k8s/base/nginx-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-deployment
  namespace: amir
spec:
  selector:
    app: nginx-deployment
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
